[package]
name = "ripsbench"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
description = "Benchmarkning of rips, the Rust userspace IP network stack"

[[bin]]
name = "ripsbench"

[dependencies]
clap = "^2"
ipnetwork = "0.10.0"
pnet = "0.15"
lazy_static = "^0.2"

#[dependencies.pnet]
#git = "https://github.com/faern/libpnet"
#branch = "checksum-improvement"
#path = "../libpnet"

[dependencies.rips]
#git = "https://github.com/faern/rips"
path = "../rips"


#[profile.release]
#debug = true
